k8s/access-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-api
  namespace: access-control
  labels:
    app: access-api
spec:
  selector:
    app: access-api
  ports:
    - name: http
      port: 80
      targetPort: http
