k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-1
  namespace: access-control
  labels:
    app: kafka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-1
  template:
    metadata:
      labels:
        app: kafka-1
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.9.0
          ports:
            - name: broker
              containerPort: 9092
            - name: controller
              containerPort: 9093
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 1536Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-1
  namespace: access-control
spec:
  selector:
    app: kafka-1
  ports:
    - name: broker
      port: 9092
      targetPort: broker
    - name: controller
      port: 9093
      targetPort: controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-2
  namespace: access-control
  labels:
    app: kafka-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-2
  template:
    metadata:
      labels:
        app: kafka-2
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.9.0
          ports:
            - name: broker
              containerPort: 9092
            - name: controller
              containerPort: 9093
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 1536Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
  namespace: access-control
spec:
  selector:
    app: kafka-2
  ports:
    - name: broker
      port: 9092
      targetPort: broker
    - name: controller
      port: 9093
      targetPort: controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-3
  namespace: access-control
  labels:
    app: kafka-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-3
  template:
    metadata:
      labels:
        app: kafka-3
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.9.0
          ports:
            - name: broker
              containerPort: 9092
            - name: controller
              containerPort: 9093
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 1536Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-3
  namespace: access-control
spec:
  selector:
    app: kafka-3
  ports:
    - name: broker
      port: 9092
      targetPort: broker
    - name: controller
      port: 9093
      targetPort: controller
